--- a/index-minimal.html
+++ b/index-minimal.html
@@ -83,11 +83,11 @@
                         </li>
                         <li><a class="page-scroll" href="#caracraft-portfolio-id">portfolio</a>
                         </li>
-                        <li><a class="page-scroll" href="#caracraft-price-id">Pricing Plan</a>
+                        <!-- <li><a class="page-scroll" href="#caracraft-price-id">Pricing Plan</a> -->
                         </li>
-                        <li><a class="page-scroll" href="#caracraft-testimonial-id">testimonial</a>
+                        <!-- <li><a class="page-scroll" href="#caracraft-testimonial-id">testimonial</a> -->
                         </li>
-                        <li><a class="page-scroll" href="#caracraft-blog-id">my blog</a>
+                        <!-- <li><a class="page-scroll" href="#caracraft-blog-id">my blog</a> -->
                         </li>
                         <li><a class="page-scroll" href="#caracraft-contact-id">contact</a>
                         </li>
@@ -144,13 +144,13 @@
                                     </div>
                                     <div class="social-bookmark-section" style="overflow:hidden;">
                                         <ul class="social-icons-list">
-                                            <li class="active"><a href="#"><i class="fa fa-twitter"></i></a>
+                                            <!-- <li class="active"><a href="#"><i class="fa fa-twitter"></i></a> -->
                                             </li>
-                                            <li><a href="#"><i class="fa fa-github"></i></a>
+                                            <li><a href="https://github.com/schmitzaddie"><i class="fa fa-github"></i></a>
                                             </li>
-                                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                                            <li><a href="https://www.linkedin.com/in/schmitzaddie/"><i class="fa fa-linkedin"></i></a>
                                             </li>
-                                            <li><a href="#"><i class="fa fa-pinterest"></i></a>
+                                            <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a> -->
                                             </li>
                                         </ul>
                                     </div>
@@ -482,13 +482,13 @@
                                     <div class="portfolio-description">
                                         <div class="description-box">
                                             <ul class="portfolio-catagory">
-                                                <li><a href="#">Branding</a>
+                                                <li><a href="#">Workout With Sassy Addie</a>
                                                 </li>
-                                                <li><a href="#">Logo</a>
+                                                <!-- <li><a href="#">Logo</a> -->
                                                 </li>
                                             </ul>
                                             <div class="portfolio-action-btn">
-                                                <a href="portfolio-details-minimal-1.html"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
+                                                <a href="https://schmitzaddie.github.io/workout-app/"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
                                                 <a href="http://placehold.it/800x588" class="portfolio-gallery-set"><img src="img/icons/Focus_minimal.png" alt="">
                                                 </a>
                                             </div>
@@ -628,7 +628,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="area-title text-right mb-80">
-                                <p>I am an experienced designer. Over 4 years of hands on visual and ui ux design. have a look at my time line.</p>
+                                <p>I am currently a student who blah blah blah.</p>
                             </div>
                         </div>
                     </div>
@@ -638,42 +638,42 @@
                                 <div class="clearfix">
                                     <div class="single-experience width-50 white-bg">
                                         <div class="single-description-conent">
-                                            <h4>WEB DESIGNER</h4>
+                                            <h4>STATE SUPPORT ANALYST</h4>
                                             <p class="company-name">THEMEROX</p>
-                                            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative to strategy foster collaborative thinking to further the du lu overall value proposition.</p>
+                                            <p>Insert information here.</p>
                                         </div>
                                     </div>
                                     <div class="width-50 gray-bg">
                                         <div class="single-duration-conent">
-                                            <h1>2012 - 2013</h1>
+                                            <h1>2017 - Current</h1>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="clearfix">
                                     <div class="single-experience width-50 white-bg push-half">
                                         <div class="single-description-conent">
-                                            <h4>UI/UX DESIGNER</h4>
+                                            <h4>HUMAN RESOURCES ADMINISTRATIVE INTERN</h4>
                                             <p class="company-name">THEMEPURCH</p>
-                                            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative to strategy foster collaborative thinking to further the du lu overall value proposition.</p>
+                                            <p>Insert information here.</p>
                                         </div>
                                     </div>
                                     <div class="width-50 gray-bg pull-half">
                                         <div class="single-duration-conent">
-                                            <h1>2013 - 2015</h1>
+                                            <h1>2017</h1>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="clearfix">
                                     <div class="single-experience width-50 white-bg">
                                         <div class="single-description-conent">
-                                            <h4>UI ARCHITECT</h4>
+                                            <h4>ADMINISTRATIVE ASSISTANT</h4>
                                             <p class="company-name">THEMEWAGON</p>
-                                            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative to strategy foster collaborative thinking to further the du lu overall value proposition.</p>
+                                            <p>Insert information here.</p>
                                         </div>
                                     </div>
                                     <div class="width-50 gray-bg">
                                         <div class="single-duration-conent">
-                                            <h1>2015 - 2016</h1>
+                                            <h1>2017</h1>
                                         </div>
                                     </div>
                                 </div>
@@ -687,7 +687,7 @@
             </div>
             <!-- Experience section end -->
             <!-- Pricing Plan section start -->
-            <div class="cara-standard-section pricing-section white-bg" id="caracraft-price-id">
+            <!-- <div class="cara-standard-section pricing-section white-bg" id="caracraft-price-id">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-5">
@@ -786,10 +786,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Pricing Plan section end -->
             <!-- Testimonial section start -->
-            <div class="cara-standard-section testimonial-section minimal-testimonial gray-bg" id="caracraft-testimonial-id">
+            <!-- <div class="cara-standard-section testimonial-section minimal-testimonial gray-bg" id="caracraft-testimonial-id">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
@@ -866,11 +866,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Testimonial section end -->
 
             <!-- Blog section start -->
-            <div class="cara-standard-section blog-section white-bg" id="caracraft-blog-id">
+            <!-- <div class="cara-standard-section blog-section white-bg" id="caracraft-blog-id">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
@@ -941,7 +941,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Blog section end -->
             <div id="particle-bubble"></div>
             <!-- Contact section start -->
@@ -955,7 +955,7 @@
                                         <h1>09. DROP ME A LINE</h1>
                                     </div>
                                     <div class="info-block-text">
-                                        <p>Please dont hesitate to send me a message using the form on the contact form or, preferably, you could send an email to dan at craracraft.com with a “dot co dot uk” at the end. From there we can arrange a phone or skype call and I’ll tell you about the time I got stuck in the loft.</p>
+                                        <p>Please don't hestiate to contact me!</p>
                                     </div>
                                     <div class="address-info">
                                         <div class="single-info">
@@ -963,7 +963,7 @@
                                                 <i class="fa fa-map-marker"></i>
                                             </div>
                                             <div class="info-details">
-                                                <p>99 Barnard st - suit 111 united kingdom</p>
+                                                <p>Kansas City, Missouri</p>
                                             </div>
                                         </div>
                                         <div class="single-info">
@@ -971,7 +971,7 @@
                                                 <i class="fa fa-envelope-o"></i>
                                             </div>
                                             <div class="info-details">
-                                                <a href="mailto:Hellow@craracraft.com.uk">Hellow@craracraft.com.uk</a>
+                                                <a href="mailto:schmitzaddie@gmail.com">schmitzaddie@gmail.com</a>
                                             </div>
                                         </div>
                                         <div class="single-info">
@@ -979,17 +979,17 @@
                                                 <i class="fa fa-phone"></i>
                                             </div>
                                             <div class="info-details">
-                                                <p>+3333 222 1111</p>
+                                                <p>307-365-0079</p>
                                             </div>
                                         </div>
-                                        <div class="single-info">
+                                        <!-- <div class="single-info">
                                             <div class="info-icon">
                                                 <i class="fa fa-skype"></i>
                                             </div>
                                             <div class="info-details">
                                                 <p>caracraft007.uk</p>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -1032,7 +1032,7 @@
                         <div class="footer-info">
                             <a href="index.html"><img src="img/logos/logo.png" alt="">
                             </a>
-                            <p>MADE WITH <i class="fa fa-heart"></i> BY KABIR 2017 </p>
+                            <p>MADE WITH <i class="fa fa-heart"></i></p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
