Updated projects and work experience.

--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
                             <div class="skill-content-section width-50  push-half">
                                 <div class="area-title text-right">
                                     <h1 class="dir-rtl">02. MY TECHNICAL SKILL</h1>
-                                    <p>Technical Languages: HTML5, CSS, JavaScript, jQuery, Node.js.</p>
-                                    <p>Tools: VSCode, MySQL, GitHub, GitLab, JIRA, Postman, Karate, Adobe Design Suite.</p>
+                                    <p>Technical Skills: HTML5 , CSS3, JavaScript, jQuery, Node.js., Bootstrap, MySQL, Sequelize, Handlebars, REST, Firebase, Express, MongoDB, GitHub, GitLab, Heroku, Visual Studio Code, Postman, Mocha, Chai, Travis, EsLint, JIRA, Subversion, Confluence, Adobe Design Suite</p>
                                 </div>
                                 <div class="progress-bar-area text-right">
                                     <div class="single-bar">
@@ -355,7 +354,7 @@
             </div>
             <!--Fun Fatcs  section end -->
             <!-- Service section start -->
-            <div class="cara-standard-section service-section gray-bg" id="caracraft-service-id">
+            <!-- <div class="cara-standard-section service-section gray-bg" id="caracraft-service-id">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
@@ -422,7 +421,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Service section end -->
             <!-- Portfolio section start -->
             <div class="car-standard-section portfolio-section white-bg" id="caracraft-portfolio-id">
@@ -467,7 +466,7 @@
                                             <div class="portfolio-action-btn">
                                                 <a href="portfolio-details-minimal.html"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
                                                 <a href="http://placehold.it/390x588" class="portfolio-gallery-set"><img src="img/icons/Focus_minimal.png" alt="">
-                                                </a>
+                                                </a> 
                                             </div>
                                         </div>
                                     </div>
@@ -476,7 +475,7 @@
                             <div class="portfolio-item cat2 cat3 col-md-8">
                                 <div class="portfolio-item-content">
                                     <div class="item-thumbnail">
-                                        <img src="img/workout.png" alt="">
+                                        <img src="img/workout2.png" alt="">
                                     </div>
                                     <div class="portfolio-description">
                                         <div class="description-box">
@@ -498,7 +497,7 @@
                             <div class="portfolio-item cat1  col-md-8">
                                 <div class="portfolio-item-content">
                                     <div class="item-thumbnail">
-                                        <img src="img/psychic.png" alt="">
+                                        <img src="img/psychic2.png" alt="">
                                     </div>
                                     <div class="portfolio-description">
                                         <div class="description-box">
@@ -518,7 +517,7 @@
                             <div class="portfolio-item cat2 cat1 cat3 col-md-4">
                                 <div class="portfolio-item-content">
                                     <div class="item-thumbnail">
-                                        <img src="img/crystal.png" alt="">
+                                        <img src="img/crystal2.png" alt="">
                                     </div>
                                     <div class="portfolio-description">
                                         <div class="description-box">
@@ -540,18 +539,18 @@
                             <div class="portfolio-item cat4 cat3 col-md-4 cat1">
                                 <div class="portfolio-item-content">
                                     <div class="item-thumbnail">
-                                        <img src="http://placehold.it/370x264" alt="">
+                                        <img src="img/townify2.png">
                                     </div>
                                     <div class="portfolio-description">
                                         <div class="description-box">
                                             <ul class="portfolio-catagory">
-                                                <li><a href="#">Branding</a>
+                                                <li><a href="#">Front End</a>
                                                 </li>
-                                                <li><a href="#">Logo</a>
+                                                <li><a href="#">Back End</a>
                                                 </li>
                                             </ul>
                                             <div class="portfolio-action-btn">
-                                                <a href="portfolio-details-minimal-1.html"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
+                                                <a href="https://townify.herokuapp.com/"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
                                                 <a href="http://placehold.it/570x407" class="portfolio-gallery-set"><img src="img/icons/Focus_minimal.png" alt="">
                                                 </a>
                                             </div>
@@ -625,7 +624,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="area-title text-right mb-80">
-                                <p>I am currently a student who blah blah blah.</p>
+                                <p>Valued for creativity and attention to detail throughout agile development cycle. Collaborates with developers, QA, and business analysts to produce quality, customer-driven applications and support to state and industry customers. Strong foundation of full-stack development principles with industry and company-specific business knowledge. Quick understanding and application of new tools and technologies.</p>
                             </div>
                         </div>
                     </div>
@@ -637,12 +636,12 @@
                                         <div class="single-description-conent">
                                             <h4>STATE SUPPORT ANALYST</h4>
                                             <p class="company-name">National Insurance Producer Registry</p>
+                                            <p>Elicit requirements for new legislation and requested changes of supported products.</p>
+                                            <p>Research and test reported defects and data discrepancies.</p>
+                                            <p>Assist in manual-testing using Postman and creation of test transactions through front-end applications.</p>
+                                            <p>Participate in and facilitate agile ceremonies, serve as back-up Scrum Master.</p>
                                             <p>Establish and maintain professional relationships with state regulators and internal stakeholders.</p>
-                                            <p>Elicit requirements for new legislation and requested changes for supported products.</p>
-                                            <p>Participate in and faciliate agile ceremonies.</p>
                                             <p>Provide second tier support for customer service issues.</p>
-                                            <p>Indentify defects in application.</p>
-                                            <p>Groom JIRA tickets for defects, upcoming innovation, and maintence.</p>
                                         </div>
                                     </div>
                                     <div class="width-50 gray-bg">
@@ -672,8 +671,8 @@
                                         <div class="single-description-conent">
                                             <h4>ADMINISTRATIVE ASSISTANT</h4>
                                             <p class="company-name">Fishel Pools</p>
-                                            <p>Implemented systems and policies to ensure smooth operation of office.</p>
-                                            <p>Ensured compliance with current safety regulations of company by updating manuals and policies and facilitate safety meetings.</p>
+                                            <p>Identified operational short-comings and oversaw resolution through implementation of new systems and policies to ensure smooth operation of office.</p>
+                                            <p>Ensured compliance with current safety regulations of company by updating manuals and policies.</p>
                                             <p>Billed and tracked accountes recievable.</p>
                                             <p>Served as company's lead customer service representative, oversaw retail stoe, and supervised retail associate.</p>
                                         </div>
@@ -1059,7 +1058,7 @@
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/plugins.js"></script>
-    <script src="js/jquery.isotope.js"></script>
+    <script src="js/jquery.isotxope.js"></script>
     <script src="js/main.js"></script>
     
      <!-- Jquery Particles-->
