Update image srcs

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <div class="default-header">
                                 <div class=" col-md-5 col-sm-6 header-right">
                                     <div class="dental-right item-thumbnail">
-                                        <img src="img/headshot.jpg" alt="">
+                                        <img src="img/headshot.JPG" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-7 col-sm-6 header-left">
@@ -207,7 +207,7 @@
                                 <div class="section-gallery-content">
                                     <div class="gallery-slider gallery-box">
                                         <div class="single-gallery-slide">
-                                            <a class="gallery-popup"><img src="img/schmitz.jpg" alt="">
+                                            <a class="gallery-popup"><img src="img/schmitz.JPG" alt="">
                                             </a>
                                         </div>
                                         <div class="single-gallery-slide">
