--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                                             <p class="company-name">National Association of Insurance Commissioners</p>
                                             <p>Maintained upmost confidentiality when dealing with sensitive personnel materials and information.</p>
                                             <p>Conducted background checks for company-wide job candidates.</p>
-                                            <p>Executed various audcits of HR function to determine efficacy and accuracy of records as assigned.</p>
+                                            <p>Executed various audits of HR function to determine efficacy and accuracy of records as assigned.</p>
                                         </div>
                                     </div>
                                     <div class="width-50 gray-bg pull-half">
@@ -714,8 +714,8 @@
                                             <p class="company-name">Fishel Pools</p>
                                             <p>Identified operational short-comings and oversaw resolution through implementation of new systems and policies to ensure smooth operation of office.</p>
                                             <p>Ensured compliance with current safety regulations of company by updating manuals and policies.</p>
-                                            <p>Billed and tracked accountes recievable.</p>
-                                            <p>Served as company's lead customer service representative, oversaw retail stoe, and supervised retail associate.</p>
+                                            <p>Billed and tracked accounts recievable.</p>
+                                            <p>Served as company's lead customer service representative, oversaw retail store, and supervised retail associate.</p>
                                         </div>
                                     </div>
                                     <div class="width-50 gray-bg">
