Adding updated projects.

--- a/index.html
+++ b/index.html
@@ -597,51 +597,49 @@
                                     </div>
                                 </div>
                             </div>
-            <!-- Commenting out until I have more projects to add -->
-                            <!-- <div class="portfolio-item cat1 cat3 col-md-4">
+                            <div class="portfolio-item cat1 cat3 col-md-4">
                                 <div class="portfolio-item-content">
                                     <div class="item-thumbnail">
-                                        <img src="http://placehold.it/370x264" alt="">
+                                        <img src="img/friendfinder.png" alt="">
                                     </div>
                                     <div class="portfolio-description">
                                         <div class="description-box">
                                             <ul class="portfolio-catagory">
-                                                <li><a href="#">Branding</a>
+                                                <li><a href="#">Front End</a>
                                                 </li>
-                                                <li><a href="#">Logo</a>
+                                                <li><a href="#">Back End</a>
                                                 </li>
                                             </ul>
                                             <div class="portfolio-action-btn">
-                                                <a href="portfolio-details-minimal-1.html"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp; -->
+                                                <a href="https://boiling-wave-96901.herokuapp.com/"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;</a>
                                                 <!-- <a href="http://placehold.it/570x407" class="portfolio-gallery-set"><img src="img/icons/Focus_minimal.png" alt=""> -->
-                                                <!-- </a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div> -->
-                            <!-- <div class="portfolio-item cat1 cat3 col-md-4">
+                            </div>
+                            <div class="portfolio-item cat1 cat3 col-md-4">
                                 <div class="portfolio-item-content">
                                     <div class="item-thumbnail">
-                                        <img src="http://placehold.it/370x264" alt="">
+                                        <img src="img/clickygame.png" alt="">
                                     </div>
                                     <div class="portfolio-description">
                                         <div class="description-box">
                                             <ul class="portfolio-catagory">
-                                                <li><a href="#">Branding</a>
+                                                <li><a href="#">Front End</a>
                                                 </li>
-                                                <li><a href="#">Logo</a>
+                                                <li><a href="#">Back End</a>
                                                 </li>
                                             </ul>
                                             <div class="portfolio-action-btn">
-                                                <a href="portfolio-details-minimal-1.html"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
-                                                <a href="http://placehold.it/570x407" class="portfolio-gallery-set"><img src="img/icons/Focus_minimal.png" alt="">
+                                                <a href="https://schmitzaddie.github.io/clicky-game/"><i class="fa fa-chain fa-2x" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
+                                                <!-- <a href="http://placehold.it/570x407" class="portfolio-gallery-set"><img src="img/icons/Focus_minimal.png" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                         <!-- REMOVING FOR NOW SINCE THERE IS NOT MANY PROJECTS UPLOADED -->
                         <!-- <div class="pagination-area">
