Updated currently learning and resume.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                             </tr>
                                             <tr>
                                                 <th>CURRENTLY LEARNING:</th>
-                                                <td>React</td>
+                                                <td>Java and Kotlin</td>
                                             </tr>
                                             <!-- <tr>
                                                 <th>WORK HOUR:</th>
@@ -186,13 +186,8 @@
                                     <h1>01. about myself</h1>
                                 </div>
                                 <div class="about-block-text">
-                                    <p>My name is Addie Schmitz. I am 24 years old! I graduated from Truman State University in 2017 with my
-                                        Bachelor's in Justice Systems and a minor in Political Science. Several months after graduation, I was
-                                        blessed enough to accept an internship in the Human Resources department of the National Association of
-                                        Insurance Commissioners. Three months into my time with the company, I moved to a full-time position
-                                        within the sister company, the National Insurance Producer Registry. I have been a State Support Analyst
-                                        with NIPR for almost 2 years now and have loved every minute being immersed in an agile software development
-                                        team. I am eager to move forward into full-time development and continue to build and refine my craft!</p>
+                                    <p>Valued for creativity and attention to detail throughout agile development cycle. Collaborates with developers, QA, and business analysts to produce quality, customer-driven applications and support to state and industry customers. Strong foundation of full-stack development principles. Quick understanding and application of new tools and technologies.
+                                    </p>
                                     <!-- <a href="about-minimal.html" class="button sabbi-button sabbi-btn-1">KNOW MORE &nbsp;&nbsp; <small>+</small></a> -->
                                 </div>
                                 <!-- <div class="signature">
